css/colors.css
.image{
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.column{
    width: 50%;
    float: left;
}

.title{
    background-image: url("rainbow.jpg");
    margin-left:6%;
    margin-right: 6%;
    text-align: center;
    font-family:'Courier New', Courier, monospace;
    color: white;
    text-shadow: rgb(0, 0, 0) 2px 0px 5px;
    font-size: 30px;
}



.chosen{
    float: left;
}
.color:hover{
    opacity: 0.5;
}

.wrapInline{
    display: inline;
    float: left;
    padding-right: 2%;
}

.space{
    padding: .5%;
    margin-bottom: 0.5%;
    margin-right: 5%;
    border-left: 5px solid black;
    background-color: rgba(76, 76, 76, 0.2);
    font-weight: bold;
    font-size: 20px;
}

#AnalogousOne, #AnalogousTwo, #TriadicTwo, #TriadicOne, #Complementary, #ColorToChange, #SupplementaryOne, #SupplementaryTwo{
    text-shadow: #000 0px 0px 2px;
    -webkit-font-smoothing: antialiased;
}

tr {
    text-shadow: #000 0px 0px 2px;
    -webkit-font-smoothing: antialiased;

}

td {
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: black;
    font-size: larger;
}

table {
    border-collapse: separate;
    margin-top: 38%;
    width:auto;
    margin-left: auto;
    margin-right: auto;
}

td:hover {
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: lightslategrey;
}

td:hover {
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: lightslategrey;
}

.styledBtn {
    background-color: grey;
    border: none;
    color: white;
    font-size: 20px;
    padding: 15px;
}

p {
    font-weight: bold;
    font-size: 20px;
}


body {
    padding: 2em;
}

#container {
    width: 600px;
    height: 600px;
    border: 1px solid #000;
    margin-top: 10%;
    position: relative;
}

#center {
    width: 10px;
    height: 10px;
    position: absolute;
    left: 295px;
    top: 295px;
    background: #000;
}

.field {
    width: 20px;
    height: 20px;
    position: absolute;
    background: #f00;
}

#crosshair-x {
    width: 600px;
    height: 1px;
    background: #000;
    position: absolute;
    left: 0;
    top: 300px;
}

#crosshair-y {
    width: 1px;
    height: 600px;
    background: #000;
    position: absolute;
    left: 300px;
    top: 0;
}

